@@ -1,5 +1,12 @@
 2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Add do-while for `cacheunget_'; rename.
+
+	* rcsbase.h (cacheunget): Rename from `cacheunget_'; add do-while.
+	* rcsedit.c (keyreplace): Use `cacheunget'.
+
+2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int C] Add do-while for `cacheget_'; rename.
 
 	* rcsbase.h (cacheget): Rename from `cacheget_'; add do-while.
